--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -9,6 +9,7 @@
       <th>Birth year</th>
       <th>First name</th>
       <th>Last name</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= profile.birth_year %></td>
         <td><%= profile.first_name %></td>
         <td><%= profile.last_name %></td>
+        <td><%= profile.user %></td>
         <td><%= link_to 'Show', profile %></td>
         <td><%= link_to 'Edit', edit_profile_path(profile) %></td>
         <td><%= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' } %></td>
