--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,5 +20,10 @@
   <%= @profile.last_name %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @profile.user %>
+</p>
+
 <%= link_to 'Edit', edit_profile_path(@profile) %> |
 <%= link_to 'Back', profiles_path %>
