--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :completed %><br>
     <%= f.check_box :completed %>
   </div>
+  <div class="field">
+    <%= f.label :todo_list_id %><br>
+    <%= f.text_field :todo_list_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
