--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -9,6 +9,7 @@
       <th>Title</th>
       <th>Description</th>
       <th>Completed</th>
+      <th>Todo list</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= todo_item.title %></td>
         <td><%= todo_item.description %></td>
         <td><%= todo_item.completed %></td>
+        <td><%= todo_item.todo_list %></td>
         <td><%= link_to 'Show', todo_item %></td>
         <td><%= link_to 'Edit', edit_todo_item_path(todo_item) %></td>
         <td><%= link_to 'Destroy', todo_item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
