--- a/app/views/todo_items/show.html.erb
+++ b/app/views/todo_items/show.html.erb
@@ -20,5 +20,10 @@
   <%= @todo_item.completed %>
 </p>
 
+<p>
+  <strong>Todo list:</strong>
+  <%= @todo_item.todo_list %>
+</p>
+
 <%= link_to 'Edit', edit_todo_item_path(@todo_item) %> |
 <%= link_to 'Back', todo_items_path %>
